[project]
name = "pyzbx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jeffry", email = "36665036+wangxin688@users.noreply.github.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "black>=24.4.2",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyzbx"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "G002", "DTZ003", "ANN401", "ANN101", "ANN102", "EM101", "PD901", "COM812", "ISC001", "FBT", "A003", "PLR0913", "G004"]
fixable = ["ALL"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F403"]
"pyzbx/schemas/*.py" = ["N815"]

[tool.black]
line-length = 120
preview = true
